css/styles.css
/* ... */
.modal-overlay.is-open {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.modal {
  background-color: #fcfcfc;
  box-shadow:
    0px 1px 1px 0px rgba(0, 0, 0, 0.14),
    0px 1px 3px 0px rgba(0, 0, 0, 0.12),
    0px 2px 1px 0px rgba(0, 0, 0, 0.2);
  width: 408px;
  position: relative;
  padding: 72px 24px 24px 24px;
  border-radius: 4px;
}

.close-btn {
  border-radius: 50%;
  background-color: #e7e9fc;
  border: 1px solid rgba(0, 0, 0, 0.1);
  padding: 0;
  cursor: pointer;

  display: flex;
  justify-content: center;
  align-items: center;
  width: 24px;
  height: 24px;

  position: absolute;
  top: 24px;
  right: 24px;

  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.close-btn:hover,
.close-btn:focus {
  background-color: #404bbf;
}

.close-btn:hover .cross-svg,
.close-btn:focus .cross-svg {
  fill: #fff;
}

.cross-svg {
  width: 8px;
  height: 8px;
  flex-shrink: 0;
  z-index: 2;
  fill: #2e2f42;

  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.modal p {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  padding-bottom: 16px;
  text-align: center;
}

.contact-form {
  display: flex;
  flex-direction: column;
  row-gap: 8px;
}

.contact-label {
  display: flex;
  flex-direction: column;
  color: #8e8f99;
  row-gap: 4px;
  font-weight: 400;
  line-height: 1.17;
  letter-spacing: 0.04em;
  font-size: 12px;
}

.contact-input {
  border: 1px solid rgba(46, 47, 66, 0.4);
  border-radius: 4px;
  width: 360px;
  height: 40px;
}

.input-wrapper {
  position: relative;
}

.modal-form-icon {
  fill: #2e2f42;

  position: absolute;
  left: 16px;
  top: 8px;
  pointer-events: none;
}

.modal-overlay input {
  padding-left: 38px;
  outline: none;
  background-color: rgba(252, 252, 252, 1);
  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.modal-overlay textarea {
  outline: none;
  background-color: rgba(252, 252, 252, 1);
  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

input:focus,
textarea:focus {
  border-color: #4d5ae5;
}

input:focus + .modal-form-icon {
  fill: #4d5ae5;
}

.comment {
  width: 360px;
  height: 120px;
  resize: none;
  padding: 8px 16px;
  color: #2e2f42;
  line-height: 1.17;
  letter-spacing: 0.04em;
  font-size: 12px;
  margin-bottom: 8px;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.checkbox {
  cursor: pointer;
  width: 16px;
  height: 16px;
  border: 1px solid rgba(46, 47, 66, 0.4);
  border-radius: 2px;

  display: inline-flex;
  justify-content: center;
  align-items: center;

  transition: background-color cubic-bezier(0.4, 0, 0.2, 1);
}

.icon-checkbox {
  opacity: 0;
  fill: #f4f4fd;
}

input[type="checkbox"]:checked + .checkbox .icon-checkbox {
  opacity: 1;
}

input[type="checkbox"]:checked + .checkbox {
  background-color: #404bbf;
}

.privacy-text {
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: 0.04em;
  color: #8e8f99;

  display: inline-flex;
  column-gap: 8px;
}

.licence-link {
  font-weight: 400;
  color: #4d5ae5;
  line-height: 1.3;
  letter-spacing: 0.04em;
  font-size: 12px;
  text-decoration: underline;
}

.licence-checkbox {
  color: #8e8f99;
  font-size: 12px;
  display: flex;
  align-items: center;
  gap: 8px;
}

.send-btn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  cursor: pointer;
  background-color: #4d5ae5;
  color: #fff;
  border: none;
  border-radius: 4px;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);

  margin: auto;
  margin-top: 16px;
  height: 56px;
  width: 169px;
  padding: 0;

  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.send-btn:hover,
.send-btn:focus {
  background-color: #404bbf;
}

